[package]
name = "matrix_lang"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
  "llvm16-0-force-dynamic",
] }
# inkwell = "=0.4.0"
# inkwell = { version = "=0.4.0", features = ["llvm18-0"] }
